--- a/src/main/load/mainLoad.html
+++ b/src/main/load/mainLoad.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="EN">
-  <head>
-    <link rel="stylesheet" href="./loading.css" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
-    <title>Bush Luncher [Loading...]</title>
-  </head>
-  <body>
-    <div id="mainIcon"></div>
-    <p id="state">Loading...</p>
-    <p id="version"><span class="toReplace" data-type="app-version"></span></p>
-  </body>
+<html lang='EN'>
+<head>
+  <link rel='stylesheet' href='./loading.css' />
+  <meta http-equiv='Content-Security-Policy' content="script-src 'self';">
+  <title>Bush Luncher [Loading...]</title>
+</head>
+<body>
+<div id='mainIcon'></div>
+<p id='state'>Loading...</p>
+<p id='version'><span class='toReplace' data-type='app-version'></span></p>
+<!--TODO: Display Current Version-->
+</body>
 </html>
