--- a/src/renderer/preLoad.html
+++ b/src/renderer/preLoad.html
@@ -42,7 +42,7 @@
         opacity: 0;
       }
     }</style>
-  <script src='preLoad.ts'></script>
+  <script src='preLoad.js'></script>
 </head>
 <body>
 <svg id='mainIcon' viewBox='0 0 2634 2771' xmlns='http://www.w3.org/2000/svg'>
@@ -114,7 +114,9 @@
                       <feComposite operator='in' in='628325_dropShadow_0_color' in2='628325_dropShadow_0_blur'
                                    result='628325_dropShadow_0_shadow_result'></feComposite>
                       <feMerge>
+                        <!--suppress HtmlUnknownTag -->
                         <feMergeNode in='628325_dropShadow_0_shadow_result'></feMergeNode>
+                        <!--suppress HtmlUnknownTag -->
                         <feMergeNode in='SourceGraphic'></feMergeNode>
                       </feMerge>
                     </filter>
