--- a/src/renderer/preLoad.html
+++ b/src/renderer/preLoad.html
@@ -4,7 +4,7 @@
   <meta http-equiv='Content-Security-Policy' content="script-src 'self';">
   <title>Bush Luncher [Loading...]</title>
   <style>
-    @import "./defaultStyle.css";
+    @import "css/defaultStyle.css";
 
     #mainIcon {
       width: 100vw;
